--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -198,8 +198,20 @@ a {
 }
 .header__top {
   padding-top: 17px;
+  height: 79px;
+  background-color: transparent;
+  transition: background-color 0.4s;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 9999;
+}
+.header__top-wrapper {
   display: flex;
   align-items: center;
+}
+.header__top.sticky {
+  background-color: #fbd745;
 }
 .header-logo {
   width: 188px;
@@ -235,7 +247,7 @@ a {
   align-items: center;
   justify-content: center;
   width: 81px;
-  height: 44px;
+  height: 36px;
   border: 2px solid #000;
   filter: drop-shadow(0px 12px 24px rgba(96, 90, 196, 0.15));
   border-radius: 50px;
@@ -245,11 +257,11 @@ a {
   transform: rotate(0deg);
 }
 .header-language__arrow {
-  width: 14px;
-  height: 7px;
-  margin: 0 0 1px 9px;
+  width: 15px;
+  height: 9px;
+  margin: 0 0 5px 4px;
   transform: rotate(180deg);
-  background: url("../../images/header/arrow.png") no-repeat center center/cover;
+  background: url("../../images/header/arrow.svg") no-repeat center center/cover;
 }
 .header-language .menu-language {
   display: none;
@@ -284,7 +296,7 @@ a {
 }
 .header__bottom {
   max-width: 1000px;
-  margin-top: 75px;
+  margin-top: 154px;
   display: flex;
   justify-content: space-between;
 }
@@ -321,6 +333,174 @@ a {
 }
 .header .phone-header {
   height: 520px;
+  position: relative;
+}
+.header .phone-header__mark {
+  position: absolute;
+}
+.header .phone-header__mark:nth-child(1) {
+  top: 106px;
+  right: 168px;
+  animation: move1 forwards 10s infinite;
+  animation-delay: 3s;
+  animation-timing-function: linear;
+}
+.header .phone-header__mark:nth-child(2) {
+  top: 240px;
+  right: 88px;
+  animation: move2 forwards 10s infinite;
+  animation-delay: 3s;
+  animation-timing-function: linear;
+}
+.header .phone-header__mark:nth-child(3) {
+  top: 77px;
+  right: 13px;
+  animation: move3 forwards 10s infinite;
+  animation-delay: 3s;
+  animation-timing-function: linear;
+}
+.header .phone-header__mark:nth-child(4) {
+  right: 0;
+  top: 233px;
+  animation: move4 forwards 10s infinite;
+  animation-delay: 3s;
+  animation-timing-function: linear;
+}
+@keyframes move1 {
+  0% {
+    top: 106px;
+    right: 168px;
+  }
+  10% {
+    top: 50px;
+    right: 50px;
+  }
+  20% {
+    top: 50px;
+    right: 50px;
+  }
+  30% {
+    top: 50px;
+    right: 50px;
+  }
+  40% {
+    top: 50px;
+    right: 50px;
+  }
+  50% {
+    top: 50px;
+    right: 200px;
+  }
+  90% {
+    top: 50px;
+    right: 200px;
+  }
+  100% {
+    top: 106px;
+    right: 168px;
+  }
+}
+@keyframes move2 {
+  0% {
+    top: 200px;
+    right: 88px;
+  }
+  10% {
+    top: 76px;
+    right: 180px;
+  }
+  20% {
+    top: 76px;
+    right: 180px;
+  }
+  30% {
+    top: 76px;
+    right: 180px;
+  }
+  40% {
+    top: 76px;
+    right: 180px;
+  }
+  50% {
+    top: 50px;
+    right: 50px;
+  }
+  90% {
+    top: 50px;
+    right: 50px;
+  }
+  100% {
+    top: 200px;
+    right: 88px;
+  }
+}
+@keyframes move3 {
+  0% {
+    top: 77px;
+    right: 13px;
+  }
+  10% {
+    top: 195px;
+    right: 13px;
+  }
+  20% {
+    top: 195px;
+    right: 13px;
+  }
+  30% {
+    top: 195px;
+    right: 13px;
+  }
+  40% {
+    top: 195px;
+    right: 13px;
+  }
+  50% {
+    top: 180px;
+    right: 150px;
+  }
+  90% {
+    top: 180px;
+    right: 150px;
+  }
+  100% {
+    top: 77px;
+    right: 13px;
+  }
+}
+@keyframes move4 {
+  0% {
+    right: 0;
+    top: 233px;
+  }
+  10% {
+    right: 150px;
+    top: 200px;
+  }
+  20% {
+    right: 150px;
+    top: 200px;
+  }
+  30% {
+    right: 150px;
+    top: 200px;
+  }
+  40% {
+    right: 150px;
+    top: 200px;
+  }
+  50% {
+    top: 50%;
+    right: 150px;
+  }
+  90% {
+    top: 50%;
+    right: 150px;
+  }
+  100% {
+    right: 0;
+    top: 233px;
+  }
 }
 
 .features {
@@ -721,11 +901,11 @@ a {
   transform: rotate(0deg);
 }
 .footer-language__arrow {
-  width: 14px;
-  height: 7px;
-  margin: 0 0 1px 9px;
+  width: 15px;
+  height: 9px;
+  margin: 0 0 5px 4px;
   transform: rotate(180deg);
-  background: url("../../images/header/arrow.png") no-repeat center center/cover;
+  background: url("../../images/header/arrow.svg") no-repeat center center/cover;
 }
 .footer-language .footer-language {
   display: none;
@@ -760,6 +940,10 @@ a {
 }
 
 @media screen and (max-width: 1650px) {
+  .features::after {
+    display: none;
+  }
+
   .how::after {
     display: none;
   }
@@ -767,10 +951,6 @@ a {
 @media screen and (min-width: 861px) and (max-width: 960px) {
   .header__phone {
     margin-top: 10%;
-  }
-
-  .features::after {
-    display: none;
   }
 
   .footer__left {
@@ -794,6 +974,9 @@ a {
     width: 100%;
     z-index: 99;
     padding: 17px 10px;
+  }
+  .header__top-wrapper {
+    justify-content: space-between;
   }
   .header #header-menu {
     display: block;
@@ -864,11 +1047,14 @@ a {
     font-size: 18px;
     line-height: 22px;
   }
-  .header__phone {
-    margin-top: 27px;
+  .header .phone-header {
+    margin: 27px auto 0 auto;
   }
   .header .phone-header__img {
     margin: 0 auto;
+  }
+  .header .phone-header__mark {
+    width: 20%;
   }
   .header .appstore__image {
     background: url("../../images/header/appstore-mobile.png") no-repeat center center/cover;
