--- a/assets/styles/scss/base/_media.scss
+++ b/assets/styles/scss/base/_media.scss
@@ -45,6 +45,9 @@
       width: 100%;
       z-index: 99;
       padding: 17px 10px;
+      &-wrapper {
+        justify-content: space-between;
+      }
     }
     #header-menu {
       display: block;
@@ -117,12 +120,13 @@
       font-size: 18px;
       line-height: 22px;
     }
-    &__phone {
-      margin-top: 27px;
-    }
     .phone-header {
+      margin: 27px auto 0 auto;
       &__img {
         margin: 0 auto;
+      }
+      &__mark{
+        width: 20%;
       }
     }
     .appstore__image {
