--- a/assets/styles/scss/layout/_header.scss
+++ b/assets/styles/scss/layout/_header.scss
@@ -8,8 +8,20 @@
   }
   &__top {
     padding-top: 17px;
-    display: flex;
-    align-items: center;
+    height: 79px;
+    background-color: transparent;
+    transition: background-color 0.4s;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 9999;
+    &-wrapper {
+      display: flex;
+      align-items: center;
+    }
+    &.sticky {
+      background-color: $orange--10;
+    }
   }
   &-logo {
     width: 188px;
@@ -44,23 +56,24 @@
       align-items: center;
       justify-content: center;
       width: 81px;
-      height: 44px;
+      height: 36px;
       border: 2px solid $black;
       filter: drop-shadow(0px 12px 24px rgba(96, 90, 196, 0.15));
       border-radius: 50px;
       cursor: pointer;
-      &.active{
-        .header-language__arrow{
+      &.active {
+        .header-language__arrow {
           transform: rotate(0deg);
         }
       }
     }
-    &__arrow{
-      width: 14px;
-      height: 7px;
-      margin: 0 0 1px 9px;
+    &__arrow {
+      width: 15px;
+      height: 9px;
+      margin: 0 0 5px 4px;
       transform: rotate(180deg);
-      background: url('../../images/header/arrow.png') no-repeat center center / cover;
+      background: url("../../images/header/arrow.svg") no-repeat center center /
+        cover;
     }
     .menu-language {
       &.active {
@@ -96,7 +109,7 @@
   }
   &__bottom {
     max-width: 1000px;
-    margin-top: 75px;
+    margin-top: 154px;
     display: flex;
     justify-content: space-between;
   }
@@ -111,15 +124,17 @@
     justify-content: space-between;
   }
   .appstore__image,
-  .google__image{
+  .google__image {
     width: 180px;
     height: 52px;
   }
-  .appstore__image{
-    background: url('../../images/header/appstore.png') no-repeat center center / cover;
+  .appstore__image {
+    background: url("../../images/header/appstore.png") no-repeat center center /
+      cover;
   }
-  .google__image{
-    background: url('../../images/header/google.png') no-repeat center center / cover;
+  .google__image {
+    background: url("../../images/header/google.png") no-repeat center center /
+      cover;
   }
   &__title {
     font-size: 44px;
@@ -133,5 +148,174 @@
   }
   .phone-header {
     height: 520px;
+    position: relative;
+    &__mark {
+      position: absolute;
+
+      &:nth-child(1) {
+        top: 106px;
+        right: 168px;
+        animation: move1 forwards 10s infinite;
+        animation-delay: 3s;
+        animation-timing-function: linear;
+      }
+      &:nth-child(2) {
+        top: 240px;
+        right: 88px;
+        animation: move2 forwards 10s infinite;
+        animation-delay: 3s;
+        animation-timing-function: linear;
+      }
+      &:nth-child(3) {
+        top: 77px;
+        right: 13px;
+        animation: move3 forwards 10s infinite;
+        animation-delay: 3s;
+        animation-timing-function: linear;
+      }
+      &:nth-child(4) {
+        right: 0;
+        top: 233px;
+        animation: move4 forwards 10s infinite;
+        animation-delay: 3s;
+        animation-timing-function: linear;
+      }
+      @keyframes move1 {
+        0% {
+          top: 106px;
+          right: 168px;
+        }
+        10% {
+          top: 50px;
+          right: 50px;
+        }
+        20% {
+          top: 50px;
+          right: 50px;
+        }
+        30% {
+          top: 50px;
+          right: 50px;
+        }
+        40% {
+          top: 50px;
+          right: 50px;
+        }
+        50% {
+          top: 50px;
+          right: 200px;
+        }
+        90% {
+          top: 50px;
+          right: 200px;
+        }
+        100% {
+          top: 106px;
+          right: 168px;
+        }
+      }
+      @keyframes move2 {
+        0% {
+          top: 200px;
+          right: 88px;
+        }
+        10% {
+          top: 76px;
+          right: 180px;
+        }
+        20% {
+          top: 76px;
+          right: 180px;
+        }
+        30% {
+          top: 76px;
+          right: 180px;
+        }
+        40% {
+          top: 76px;
+          right: 180px;
+        }
+        50% {
+          top: 50px;
+          right: 50px;
+        }
+        90% {
+          top: 50px;
+          right: 50px;
+        }
+        100% {
+          top: 200px;
+          right: 88px;
+        }
+      }
+      @keyframes move3 {
+        0% {
+          top: 77px;
+          right: 13px;
+        }
+        10% {
+          top: 195px;
+          right: 13px;
+        }
+        20% {
+          top: 195px;
+          right: 13px;
+        }
+        30% {
+          top: 195px;
+          right: 13px;
+        }
+        40% {
+          top: 195px;
+          right: 13px;
+        }
+        50% {
+          top: 180px;
+          right: 150px;
+        }
+        90% {
+          top: 180px;
+          right: 150px;
+        }
+        100% {
+          top: 77px;
+          right: 13px;
+        }
+      }
+      @keyframes move4 {
+        0% {
+          right: 0;
+          top: 233px;
+        }
+        10% {
+          right: 150px;
+          top: 200px;
+        }
+        20% {
+          right: 150px;
+          top: 200px;
+        }
+        30% {
+          right: 150px;
+          top: 200px;
+        }
+        40% {
+          right: 150px;
+          top: 200px;
+        }
+        50% {
+          top: 50%;
+          right: 150px;
+        }
+        90% {
+          top: 50%;
+          right: 150px;
+        }
+        100% {
+          right: 0;
+          top: 233px;
+        }
+      }
+    }
   }
 }
