--- a/assets/styles/scss/layout/_header.scss
+++ b/assets/styles/scss/layout/_header.scss
@@ -155,166 +155,23 @@
       &:nth-child(1) {
         top: 106px;
         right: 168px;
-        animation: move1 forwards 10s infinite;
-        animation-delay: 3s;
-        animation-timing-function: linear;
+        z-index: 0;
+
       }
       &:nth-child(2) {
         top: 240px;
         right: 88px;
-        animation: move2 forwards 10s infinite;
-        animation-delay: 3s;
-        animation-timing-function: linear;
+        z-index: 0;
       }
       &:nth-child(3) {
         top: 77px;
         right: 13px;
-        animation: move3 forwards 10s infinite;
-        animation-delay: 3s;
-        animation-timing-function: linear;
+        z-index: 1;
       }
       &:nth-child(4) {
         right: 0;
         top: 233px;
-        animation: move4 forwards 10s infinite;
-        animation-delay: 3s;
-        animation-timing-function: linear;
-      }
-      @keyframes move1 {
-        0% {
-          top: 106px;
-          right: 168px;
-        }
-        10% {
-          top: 50px;
-          right: 50px;
-        }
-        20% {
-          top: 50px;
-          right: 50px;
-        }
-        30% {
-          top: 50px;
-          right: 50px;
-        }
-        40% {
-          top: 50px;
-          right: 50px;
-        }
-        50% {
-          top: 50px;
-          right: 200px;
-        }
-        90% {
-          top: 50px;
-          right: 200px;
-        }
-        100% {
-          top: 106px;
-          right: 168px;
-        }
-      }
-      @keyframes move2 {
-        0% {
-          top: 200px;
-          right: 88px;
-        }
-        10% {
-          top: 76px;
-          right: 180px;
-        }
-        20% {
-          top: 76px;
-          right: 180px;
-        }
-        30% {
-          top: 76px;
-          right: 180px;
-        }
-        40% {
-          top: 76px;
-          right: 180px;
-        }
-        50% {
-          top: 50px;
-          right: 50px;
-        }
-        90% {
-          top: 50px;
-          right: 50px;
-        }
-        100% {
-          top: 200px;
-          right: 88px;
-        }
-      }
-      @keyframes move3 {
-        0% {
-          top: 77px;
-          right: 13px;
-        }
-        10% {
-          top: 195px;
-          right: 13px;
-        }
-        20% {
-          top: 195px;
-          right: 13px;
-        }
-        30% {
-          top: 195px;
-          right: 13px;
-        }
-        40% {
-          top: 195px;
-          right: 13px;
-        }
-        50% {
-          top: 180px;
-          right: 150px;
-        }
-        90% {
-          top: 180px;
-          right: 150px;
-        }
-        100% {
-          top: 77px;
-          right: 13px;
-        }
-      }
-      @keyframes move4 {
-        0% {
-          right: 0;
-          top: 233px;
-        }
-        10% {
-          right: 150px;
-          top: 200px;
-        }
-        20% {
-          right: 150px;
-          top: 200px;
-        }
-        30% {
-          right: 150px;
-          top: 200px;
-        }
-        40% {
-          right: 150px;
-          top: 200px;
-        }
-        50% {
-          top: 50%;
-          right: 150px;
-        }
-        90% {
-          top: 50%;
-          right: 150px;
-        }
-        100% {
-          right: 0;
-          top: 233px;
-        }
+        z-index: 1;
       }
     }
   }
