completed 2nd page

--- a/assets/styles/scss/abstracts/variables.scss
+++ b/assets/styles/scss/abstracts/variables.scss
@@ -4,6 +4,7 @@ $black: #000;
 $white: #fff;
 $white--hover: #f6f8f9;
 $grey: #f6f8f9;
+$grey--text:#37474F;
 $purple: #7e77f1;
 $orange: #f7c92b;
 $orange--10: #fbd745;
