--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -795,6 +795,93 @@ a {
   background-color: #f6f8f9;
 }
 
+.team {
+  padding: 81px 0 269px 0;
+  position: relative;
+  z-index: 1;
+}
+.team__heading {
+  text-align: center;
+}
+.team__body {
+  margin-top: 60px;
+}
+.team__list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.team__item {
+  display: flex;
+}
+.team__item + .team__item {
+  margin-top: 100px;
+}
+.team__item:nth-child(odd) .team__right {
+  margin-left: 30px;
+}
+.team__item:nth-child(even) .team__left {
+  margin-right: 65px;
+  order: 2;
+}
+.team__item:nth-child(even) .team__right {
+  margin-right: 30px;
+}
+.team__left {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-width: 190px;
+}
+.team__photo {
+  border-radius: 50%;
+  border-bottom-left-radius: 0%;
+}
+.team__status {
+  margin-top: 20px;
+}
+.team__fio {
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: bold;
+}
+.team__position {
+  font-size: 14px;
+  line-height: 20px;
+  color: #37474F;
+}
+.team__right {
+  box-shadow: 0px 12px 20px rgba(96, 90, 196, 0.15);
+  border-radius: 6px 18px 18px 18px;
+  background-color: #fff;
+  padding: 35px 29px 31px 35px;
+  max-width: 825px;
+  height: 100%;
+}
+.team__text + .team__text {
+  margin-top: 17px;
+}
+.team::after, .team::before {
+  position: absolute;
+  content: "";
+  display: block;
+  z-index: -1;
+}
+.team::after {
+  background: url("../../images/team/abstract1.png") no-repeat center center;
+  width: 500px;
+  height: 511px;
+  top: 685px;
+  right: -85px;
+}
+.team::before {
+  background: url("../../images/team/abstract3.png") no-repeat center center;
+  width: 500px;
+  height: 627px;
+  top: 1401px;
+  left: -205px;
+}
+
 @media screen and (max-width: 1650px) {
   .features::after {
     display: none;
@@ -1107,6 +1194,76 @@ a {
 
   .partners__item {
     max-width: calc(100% - 40px);
+  }
+}
+@media screen and (max-width: 1300px) {
+  .header::after {
+    display: none !important;
+  }
+
+  .team::before, .team::after {
+    display: none !important;
+  }
+}
+@media screen and (max-width: 860px) {
+  .header__inner {
+    position: fixed;
+    width: 100%;
+    z-index: 999;
+  }
+
+  .team__left {
+    flex-direction: row;
+  }
+  .team__right {
+    margin-top: 14px;
+  }
+  .team__item {
+    flex-direction: column;
+  }
+  .team__item:nth-child(odd) {
+    align-items: flex-start;
+  }
+  .team__item:nth-child(odd) .team__right {
+    margin-left: 0;
+  }
+  .team__item:nth-child(even) .team__left {
+    order: 0;
+    margin-right: 0;
+    justify-content: flex-end;
+  }
+  .team__item:nth-child(even) .team__right {
+    margin-right: 0;
+  }
+  .team__item:nth-child(even) .team__photo {
+    order: 1;
+  }
+  .team__item:nth-child(even) .team__status {
+    align-items: flex-end;
+    text-align: end;
+  }
+  .team__status {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 0 15px;
+  }
+}
+@media screen and (max-width: 400px) {
+  .team {
+    padding-top: 28px;
+    padding-bottom: 65px;
+  }
+  .team__photo {
+    width: 95px;
+  }
+  .team__status {
+    font-size: 16px;
+    line-height: 24px;
+  }
+  .team__about {
+    font-size: 14px;
+    line-height: 20px;
   }
 }
 
