--- a/assets/styles/scss/base/_media.scss
+++ b/assets/styles/scss/base/_media.scss
@@ -363,7 +363,7 @@
 @media screen and (max-width: 860px) {
   .header {
     &__inner {
-      position: fixed;
+      // position: fixed;
       width: 100%;
       z-index: 999;
     }
