--- a/assets/styles/scss/base/_media.scss
+++ b/assets/styles/scss/base/_media.scss
@@ -26,6 +26,13 @@
     }
   }
 }
+@media screen and (min-width: 860px) {
+  .footer {
+    &__body {
+      height: 158px;
+    }
+  }
+}
 @media screen and (max-width: 860px) {
   .header {
     border-radius: 0%;
@@ -127,6 +134,11 @@
       }
       &__mark {
         width: 20%;
+      }
+      .phone__wrapper{
+        &::after{
+          height: 100%;
+        }
       }
     }
     .appstore__image {
