--- a/assets/styles/scss/layout/_header.scss
+++ b/assets/styles/scss/layout/_header.scss
@@ -1,7 +1,7 @@
 .header {
   height: 650px;
-  border-bottom-left-radius: 50% 18%;
-  border-bottom-right-radius: 50% 18%;
+  border-bottom-left-radius: 50% 90px;
+  border-bottom-right-radius: 50% 90px;
   overflow: hidden;
   &__inner {
     height: inherit;
