--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -189,8 +189,8 @@ a {
 
 .header {
   height: 650px;
-  border-bottom-left-radius: 50% 18%;
-  border-bottom-right-radius: 50% 18%;
+  border-bottom-left-radius: 50% 90px;
+  border-bottom-right-radius: 50% 90px;
   overflow: hidden;
 }
 .header__inner {
