--- a/assets/styles/scss/base/_media.scss
+++ b/assets/styles/scss/base/_media.scss
@@ -223,6 +223,16 @@
             top: 42%;
           }
         }
+        [data-popup-4] {
+          .top-how__phone-popup {
+            top: 52%;
+          }
+        }
+        [data-popup-5] {
+          .top-how__phone-popup {
+            top: 59%;
+          }
+        }
         [data-popup-6] {
           .top-how__phone-popup {
             top: 66%;
