--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -1179,6 +1179,12 @@ a {
   .how .body-how .top-how [data-popup-3] .top-how__phone-popup {
     top: 42%;
   }
+  .how .body-how .top-how [data-popup-4] .top-how__phone-popup {
+    top: 52%;
+  }
+  .how .body-how .top-how [data-popup-5] .top-how__phone-popup {
+    top: 59%;
+  }
   .how .body-how .top-how [data-popup-6] .top-how__phone-popup {
     top: 66%;
   }
