added dark theme

--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -1348,7 +1348,7 @@ a {
     display: none !important;
   }
 }
-@media screen and (max-width: 860px) {
+@media screen and (max-width: 860px) and (prefers-color-scheme: dark) {
   .header__inner {
     width: 100%;
     z-index: 999;
@@ -1406,6 +1406,710 @@ a {
   .team__about {
     font-size: 14px;
     line-height: 20px;
+  }
+}
+@media (prefers-color-scheme: dark) {
+  .header {
+    height: 650px;
+    border-bottom-left-radius: 50% 90px;
+    border-bottom-right-radius: 50% 90px;
+    overflow: hidden;
+  }
+  .header__inner {
+    height: inherit;
+  }
+  .header__top {
+    padding-top: 17px;
+    height: 79px;
+    background-color: transparent;
+    transition: background-color 0.4s;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 9999;
+  }
+  .header__top-wrapper {
+    display: flex;
+    align-items: center;
+  }
+  .header__top.sticky {
+    background-color: #fbd745;
+  }
+  .header-logo {
+    width: 188px;
+  }
+  .header-logo__link {
+    display: block;
+  }
+  .header-nav {
+    width: calc(100% - 188px - 160px);
+    padding-left: 60px;
+  }
+  .header-nav__list {
+    display: flex;
+    justify-content: space-between;
+  }
+  .header-nav__item {
+    font-weight: bold;
+    line-height: 22px;
+  }
+  .header-nav__link {
+    color: #000;
+  }
+  .header-language {
+    width: 160px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    font-weight: bold;
+    position: relative;
+  }
+  .header-language__popup {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 81px;
+    height: 36px;
+    border: 2px solid #000;
+    filter: drop-shadow(0px 12px 24px rgba(96, 90, 196, 0.15));
+    border-radius: 50px;
+    cursor: pointer;
+  }
+  .header-language__popup.active .header-language__arrow {
+    transform: rotate(0deg);
+  }
+  .header-language__arrow {
+    width: 15px;
+    height: 9px;
+    margin: 0 0 5px 4px;
+    transform: rotate(180deg);
+    background: url("../../images/header/arrow.svg") no-repeat center center/cover;
+  }
+  .header-language .menu-language {
+    display: none;
+    position: absolute;
+    top: 53px;
+    width: 160px;
+    height: 141px;
+    background-color: #fff;
+    box-shadow: 0px 12px 24px rgba(96, 90, 196, 0.15);
+    border-radius: 9px;
+    z-index: 999;
+  }
+  .header-language .menu-language.active {
+    display: block;
+  }
+  .header-language .menu-language__list {
+    text-align: end;
+    overflow: hidden;
+    padding: 14px 0;
+  }
+  .header-language .menu-language__link {
+    display: block;
+    cursor: url("../../images/cursor.png"), auto;
+    color: #000;
+  }
+  .header-language .menu-language__item {
+    padding: 6px 32px 6px 0;
+    font-weight: normal;
+  }
+  .header-language .menu-language__item:hover {
+    background-color: #f6f8f9;
+  }
+  .header__bottom {
+    max-width: 1000px;
+    margin-top: 154px;
+    display: flex;
+    justify-content: space-between;
+  }
+  .header__heading {
+    padding-top: 100px;
+    max-width: 550px;
+  }
+  .header__buttons {
+    max-width: 380px;
+    margin-top: 60px;
+    display: flex;
+    justify-content: space-between;
+  }
+  .header .appstore__image,
+.header .google__image {
+    width: 180px;
+    height: 52px;
+  }
+  .header .appstore__image {
+    background: url("../../images/header/appstore.png") no-repeat center center/cover;
+  }
+  .header .google__image {
+    background: url("../../images/header/google.png") no-repeat center center/cover;
+  }
+  .header__title {
+    font-size: 44px;
+    line-height: 52px;
+  }
+  .header__text {
+    margin-top: 45px;
+    font-size: 24px;
+    line-height: 30px;
+    font-weight: bold;
+  }
+  .header .phone-header {
+    height: 520px;
+    position: relative;
+  }
+  .header .phone-header__mark {
+    position: absolute;
+  }
+  .header .phone-header__mark:nth-child(1) {
+    top: 106px;
+    right: 168px;
+    z-index: 1;
+  }
+  .header .phone-header__mark:nth-child(2) {
+    top: 240px;
+    right: 88px;
+    z-index: 1;
+  }
+  .header .phone-header__mark:nth-child(3) {
+    top: 77px;
+    right: 13px;
+    z-index: 2;
+  }
+  .header .phone-header__mark:nth-child(4) {
+    right: 0;
+    top: 233px;
+    z-index: 2;
+  }
+  .header .phone-header .phone__wrapper {
+    position: relative;
+  }
+  .header .phone-header .phone__wrapper::after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 200px;
+    bottom: 0;
+    background: linear-gradient(0deg, #FFB341 -10.87%, rgba(254, 218, 70, 0) 61.88%);
+  }
+
+  .features {
+    background-color: #f6f8f9;
+    position: relative;
+  }
+  .features__inner {
+    padding: 95px 0 130px 0;
+  }
+  .features__heading {
+    max-width: 604px;
+    text-align: center;
+    margin: 0 auto;
+  }
+  .features__title {
+    font-size: 36px;
+    line-height: 43px;
+  }
+  .features__body {
+    margin-top: 90px;
+  }
+  .features__list {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 255px));
+    justify-content: center;
+    row-gap: 72px;
+    column-gap: 30px;
+  }
+  .features__item {
+    display: flex;
+    align-items: flex-start;
+  }
+  .features__text {
+    margin-left: 27px;
+    font-size: 16px;
+    line-height: 22px;
+  }
+  .features::after {
+    position: absolute;
+    display: block;
+    content: "";
+    width: 353px;
+    height: 344px;
+    background: url("../../images/features/lines.png") no-repeat center center;
+    right: 0;
+    bottom: -172px;
+    z-index: 99;
+  }
+
+  .how {
+    background: url("../../images/how/pattern.png") no-repeat center center/cover;
+    position: relative;
+  }
+  .how__inner {
+    padding: 60px 0 100px 0;
+  }
+  .how__heading {
+    text-align: center;
+  }
+  .how__title {
+    color: #fff;
+  }
+  .how .registration-how {
+    margin-top: 70px;
+    background: url("../../images/how/bg.png") no-repeat 50% 7%;
+  }
+  .how .registration-how__heading {
+    text-align: center;
+    font-size: 18px;
+    line-height: 24px;
+  }
+  .how .registration-how__title {
+    color: #fff;
+  }
+  .how .body-how {
+    display: flex;
+    flex-direction: column;
+    max-width: 964px;
+    margin: 0 auto;
+  }
+  .how .body-how .top-how {
+    display: flex;
+    justify-content: space-between;
+  }
+  .how .body-how .top-how__buy, .how .body-how .top-how__sell {
+    width: 296px;
+    min-height: 628px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+  }
+  .how .body-how .top-how__phone {
+    margin-top: 40px;
+  }
+  .how .body-how .top-how__list {
+    margin-top: 20px;
+  }
+  .how .body-how .top-how__item {
+    padding: 15px;
+    background-color: #fff;
+    box-shadow: 0px 12px 24px rgba(96, 90, 196, 0.15);
+    border-radius: 12px;
+    transition: 0.3s padding 0s;
+    margin-top: 18px;
+  }
+  .how .body-how .top-how__item:hover {
+    filter: drop-shadow(0px 8px 16px rgba(72, 66, 163, 0.35));
+    cursor: url("../../images/cursor.png"), auto;
+  }
+  .how .body-how .top-how__popup {
+    display: none;
+    position: absolute;
+    background: rgba(0, 0, 0, 0.7);
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100%;
+    z-index: 99999999999;
+  }
+  .how .body-how .top-how__popup.active {
+    display: block;
+  }
+  .how .body-how .top-how__phone-popup {
+    width: 404px;
+    height: 749px;
+    background-color: white;
+    border-radius: 24px;
+    margin: 0 auto;
+    position: absolute;
+    top: calc(50% - 374px);
+    left: calc(50% - 202px);
+    padding: 18px 21px 63px 23px;
+  }
+  .how .body-how .top-how__phone-popup .phone {
+    position: relative;
+  }
+  .how .body-how .top-how__phone-popup .phone-close {
+    position: absolute;
+    cursor: pointer;
+    content: "";
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 90px;
+    height: 18px;
+    top: -40px;
+    right: 0;
+  }
+  .how .body-how .top-how__phone-popup .phone-close__text {
+    font-size: 16px;
+    line-height: 18px;
+    color: #fff;
+  }
+  .how .body-how .top-how__phone-popup .phone-close__button {
+    width: 15px;
+    height: 15px;
+    position: relative;
+  }
+  .how .body-how .top-how__phone-popup .phone-close__line {
+    width: 21.14px;
+    height: 1.5px;
+    position: absolute;
+    background-color: #fff;
+    top: calc(50% - .7px);
+  }
+  .how .body-how .top-how__phone-popup .phone-close__line:nth-child(1) {
+    transform: rotate(45deg);
+  }
+  .how .body-how .top-how__phone-popup .phone-close__line:nth-child(2) {
+    transform: rotate(-45deg);
+  }
+  .how .body-how .top-how__phone-popup .phone-lines {
+    width: 68px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+  }
+  .how .body-how .top-how__phone-popup .phone-lines__circle {
+    width: 9px;
+  }
+  .how .body-how .top-how__phone-popup .phone-lines__line {
+    width: 51px;
+  }
+  .how .body-how .top-how__phone-popup .phone-lines__circle, .how .body-how .top-how__phone-popup .phone-lines__line {
+    height: 9px;
+    border-radius: 12px;
+    background: rgba(126, 119, 241, 0.5);
+  }
+  .how .body-how .top-how__phone-popup .phone-popup__image {
+    margin: 17px auto 0 auto;
+  }
+  .how .body-how .top-how__phone-popup .phone__title {
+    display: block;
+    text-align: center;
+    margin-top: 19px;
+  }
+  .how .body-how .top-how__title {
+    color: #fff;
+    text-align: center;
+  }
+  .how .body-how .top-how__text {
+    margin-top: 5px;
+    font-size: 14px;
+    line-height: 18px;
+  }
+  .how .body-how .top-how__image {
+    margin: 0 auto;
+  }
+  .how .body-how .bottom-how {
+    max-width: 296px;
+    margin: 0 auto;
+  }
+  .how .body-how .bottom-how__wrapper {
+    text-align: center;
+  }
+  .how .body-how .bottom-how__item {
+    padding: 15px;
+    background-color: #fff;
+    box-shadow: 0px 12px 24px rgba(96, 90, 196, 0.15);
+    border-radius: 12px;
+    transition: 0.3s padding 0s;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .how .body-how .bottom-how__item:last-child {
+    margin-top: 30px;
+  }
+  .how .body-how .bottom-how__item:hover {
+    filter: drop-shadow(0px 8px 16px rgba(72, 66, 163, 0.35));
+    cursor: url("../../images/cursor.png"), auto;
+  }
+  .how .body-how .bottom-how [data-popup-7] .top-how__phone-popup {
+    top: 38%;
+  }
+  .how .body-how .bottom-how__title {
+    color: #fff;
+    text-align: center;
+  }
+  .how .body-how .bottom-how__text {
+    margin-top: 5px;
+    font-size: 14px;
+    line-height: 18px;
+  }
+  .how .body-how .bottom-how__image {
+    margin: 0 auto;
+  }
+  .how .body-how .bottom-how .social-how {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    background: rgba(55, 71, 79, 0.1);
+    border-radius: 9px;
+    padding: 16px;
+  }
+  .how .body-how__list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .how .body-how__title {
+    color: #fff;
+  }
+  .how::after {
+    position: absolute;
+    display: block;
+    content: "";
+    left: -18px;
+    bottom: -372px;
+    width: 487px;
+    height: 492px;
+    background: url("../../images/how/dots.png");
+  }
+
+  .subscribe {
+    padding: 83px 0 155px 0;
+  }
+  .subscribe__title {
+    text-align: center;
+  }
+  .subscribe-notification {
+    background-color: #7e77f1;
+    max-width: 572px;
+    padding: 22px 40px 22px 21px;
+    margin: 43px auto 0 auto;
+    box-shadow: 0px 12px 24px rgba(96, 90, 196, 0.15);
+    border-radius: 12px;
+    color: #fff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .subscribe-notification__text {
+    margin-left: 12px;
+  }
+  .subscribe__body {
+    margin-top: 48px;
+  }
+  .subscribe__text {
+    text-align: center;
+  }
+  .subscribe__list {
+    margin-top: 68px !important;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(258px, 350px));
+    justify-content: center;
+    grid-gap: 30px;
+  }
+  .subscribe__item {
+    box-shadow: 0px 12px 24px rgba(96, 90, 196, 0.15);
+    border-radius: 12px;
+    padding: 34px 49px 47px 49px;
+  }
+  .subscribe__item:nth-child(1) {
+    background-color: #fff;
+  }
+  .subscribe__item:nth-child(2) {
+    background: linear-gradient(0deg, #ffb341 1.7%, #fdc643 49.16%, #fbd745 91.87%), #fbd745;
+  }
+  .subscribe__item:nth-child(3) {
+    background: linear-gradient(0deg, #7f78f0 0%, #6059cf 75.85%), #7e77f1;
+  }
+  .subscribe-item__title {
+    text-align: center;
+  }
+  .subscribe-item__list {
+    margin-top: 60px !important;
+    min-height: 108px;
+  }
+  .subscribe-item__point {
+    position: relative;
+  }
+  .subscribe-item__point::before {
+    position: absolute;
+    content: "";
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    top: 8px;
+    left: -20px;
+    background-color: #7e77f1;
+  }
+  .subscribe-item:nth-child(3) .subscribe-item__point::before {
+    background-color: #f7c92b;
+  }
+  .subscribe-item__link {
+    border-radius: 50px;
+    padding: 9px 0;
+    width: 100%;
+    display: block;
+  }
+  .subscribe-item #subscribe__link1 {
+    color: #7e77f1 !important;
+    border: 2px solid #7e77f1;
+  }
+  .subscribe-item #subscribe__link2 {
+    color: #000 !important;
+    border: 2px solid #000;
+  }
+  .subscribe-item #subscribe__link3 {
+    color: #fff !important;
+    border: 2px solid #fff;
+  }
+  .subscribe-item__more {
+    text-align: center;
+    box-sizing: border-box;
+    filter: drop-shadow(0px 12px 24px rgba(96, 90, 196, 0.15));
+    margin-top: 32px;
+  }
+
+  .partners {
+    padding: 72px 0 280px 0;
+    background-color: #fff;
+  }
+  .partners__heading {
+    text-align: center;
+  }
+  .partners__title {
+    font-size: 36px;
+    line-height: 43px;
+  }
+  .partners__item {
+    max-width: 263px;
+    margin-left: 80px;
+  }
+  .partners__slider {
+    margin-top: 102px;
+  }
+  .partners .slick-dots {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 67px;
+  }
+  .partners .slick-dots li {
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    background-color: #7e77f1;
+  }
+  .partners .slick-dots li + li {
+    margin-left: 15px;
+  }
+  .partners .slick-dots .slick-active {
+    width: 12px;
+    height: 12px;
+  }
+  .partners .slick-dots li button {
+    text-indent: -9999px;
+    overflow: hidden;
+    border: none;
+    padding: 0;
+  }
+
+  .footer {
+    position: absolute;
+    bottom: 0;
+    width: 100vw;
+    background: linear-gradient(180deg, #ffb341 -41.15%, #fdc643 16.04%, #fbd745 67.51%), #fbd745;
+    border-top-left-radius: 50% 37px;
+    border-top-right-radius: 50% 37px;
+  }
+  .footer__body {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .footer__left {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 683px;
+    width: 100%;
+  }
+  .footer__wrapper {
+    max-width: 452px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+  }
+  .footer__wrapper a {
+    color: #000;
+    text-decoration: underline;
+    font-size: 16px;
+    line-height: 19px;
+    font-weight: bold;
+  }
+  .footer__right {
+    display: flex;
+    align-items: center;
+  }
+  .footer__list {
+    display: flex;
+    align-items: center;
+  }
+  .footer__item:last-child {
+    margin-left: 14px;
+  }
+  .footer__link {
+    display: block;
+  }
+  .footer-language {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    font-weight: bold;
+    position: relative;
+    margin-left: 14px;
+  }
+  .footer-language__popup {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 81px;
+    height: 44px;
+    border: 2px solid #000;
+    filter: drop-shadow(0px 12px 24px rgba(96, 90, 196, 0.15));
+    border-radius: 50px;
+    cursor: pointer;
+  }
+  .footer-language__popup.active .footer-language__arrow {
+    transform: rotate(0deg);
+  }
+  .footer-language__arrow {
+    width: 15px;
+    height: 9px;
+    margin: 0 0 5px 4px;
+    transform: rotate(180deg);
+    background: url("../../images/header/arrow.svg") no-repeat center center/cover;
+  }
+  .footer-language .footer-language {
+    display: none;
+    position: absolute;
+    top: -160px;
+    width: 160px;
+    height: 141px;
+    background-color: #fff;
+    box-shadow: 0px 12px 24px rgba(96, 90, 196, 0.15);
+    border-radius: 9px;
+    z-index: 999;
+  }
+  .footer-language .footer-language.active {
+    display: block;
+  }
+  .footer-language .footer-language__list {
+    text-align: end;
+    overflow: hidden;
+    padding: 14px 0;
+  }
+  .footer-language .footer-language__link {
+    display: block;
+    cursor: url("../../images/cursor.png"), auto;
+    color: #000;
+  }
+  .footer-language .footer-language__item {
+    padding: 6px 32px 6px 0;
+    font-weight: normal;
+  }
+  .footer-language .footer-language__item:hover {
+    background-color: #f6f8f9;
   }
 }
 
