--- a/assets/styles/scss/base/_media.scss
+++ b/assets/styles/scss/base/_media.scss
@@ -33,7 +33,7 @@
     }
   }
 }
-@media screen and (max-width: 860px) {
+@media screen and (max-width: 860px) and (prefers-color-scheme: dark) {
   .header {
     border-radius: 0%;
     background: linear-gradient(
